--- a/config/database.yml
+++ b/config/database.yml
@@ -21,8 +21,11 @@ default: &default
 
 
 development:
-  <<: *default
+  adapter: sqlite3
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  timeout: 5000
   database: g0rd0_development
+
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
