--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "dependencies": {
     "@rails/webpacker": "5.4.4",
     "autoprefixer": "^10.4.20",
+    "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "postcss": "^8.4.47",
     "postcss-cli": "^11.0.0",
+    "postcss-import": "^16.1.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
